fix: adjust header padding for improved responsiveness on small screens

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -29,6 +29,10 @@
     user-select: none;
     position: relative;
     box-shadow: 0px 0px 5px #00000088;
+
+    @media screen and (max-width:450px) {
+        --header-padding: 15px;
+    }
 }
 
 .headerTitle {
